# aravis

./: .gitmodules  meson.build
src/: arv-fake-camera.xml  arv.h  arvbuffer.c  arvcamera.c  arvfakecamera.c  arvfakecamera.h  arvfakegvcamera.c  arvfeatures.h.in  arvgvfakecamera.h  arvsystem.c  arvtypes.h  meson.build
